<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rashi.class08.EditFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="109dp"
            android:layout_marginStart="109dp"
            android:layout_marginTop="22dp"
            android:text="@string/editInfo" />

        <EditText
            android:id="@+id/name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/edit"
            android:layout_marginLeft="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginTop="30dp"
            android:ems="10"
            android:hint="Name"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/email1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/name1"
            android:layout_alignRight="@+id/name1"
            android:layout_below="@+id/name1"
            android:ems="10"
            android:hint="Email"
            android:inputType="textPersonName"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/dept1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/email1"
            android:layout_alignStart="@+id/email1"
            android:layout_below="@+id/email1"
            android:layout_marginTop="23dp"
            android:text="@string/Department"
            android:visibility="invisible" />

        <RadioGroup
            android:id="@+id/rg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dept1"
            android:layout_alignStart="@+id/dept1"
            android:layout_below="@+id/dept1"
            android:layout_marginLeft="19dp"
            android:layout_marginStart="19dp"
            android:layout_marginTop="61dp"
            android:visibility="invisible">

            <RadioButton
                android:id="@+id/rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SIS" />

            <RadioButton
                android:id="@+id/rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cs" />

            <RadioButton
                android:id="@+id/rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/BIO" />

            <RadioButton
                android:id="@+id/rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Others" />
        </RadioGroup>

        <TextView
            android:id="@+id/mood1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rg1"
            android:layout_marginTop="22dp"
            android:text="TextView"
            tools:text="@string/MoodText"
            android:visibility="invisible" />

        <SeekBar
            android:id="@+id/sb1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/dept1"
            android:layout_alignStart="@+id/dept1"
            android:layout_below="@+id/mood1"
            android:visibility="invisible" />

        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/save" />
    </RelativeLayout>
</FrameLayout>
